# self-healing-ci

./: .bazelrc  .env.example  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  docker-compose.yaml  go.mod  go.sum
cmd/server/: BUILD.bazel  main.go
examples/: .self-healing-ci.yaml
internal/analyzer/: BUILD.bazel  analyzer.go  analyzer_test.go
internal/config/: BUILD.bazel  config.go  config_test.go
internal/github/: BUILD.bazel  auth.go  auth_test.go  client.go  client_test.go
internal/retry/: BUILD.bazel  engine.go  engine_test.go  redis_store.go  redis_store_test.go  store.go
internal/webhook/: BUILD.bazel  handler.go  handler_test.go  slack.go
