load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/pratiksolim/self-healing-ci/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/github",
        "//internal/webhook",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
