load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/pratiksolim/self-healing-ci/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/github",
        "//internal/retry",
        "//internal/webhook",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
