load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "github",
    srcs = [
        "auth.go",
        "client.go",
    ],
    importpath = "github.com/pratiksolim/self-healing-ci/internal/github",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_bradleyfalzon_ghinstallation_v2//:ghinstallation",
        "@com_github_google_go_github_v70//github",
    ],
)

go_test(
    name = "github_test",
    srcs = [
        "auth_test.go",
        "client_test.go",
    ],
    embed = [":github"],
    deps = ["@com_github_google_go_github_v70//github"],
)
