load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "retry",
    srcs = [
        "engine.go",
        "redis_store.go",
        "store.go",
    ],
    importpath = "github.com/pratiksolim/self-healing-ci/internal/retry",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_redis_go_redis_v9//:go-redis"],
)

go_test(
    name = "retry_test",
    srcs = [
        "engine_test.go",
        "redis_store_test.go",
    ],
    embed = [":retry"],
    deps = [
        "@com_github_alicebob_miniredis_v2//:miniredis",
        "@com_github_redis_go_redis_v9//:go-redis",
    ],
)
