load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "webhook",
    srcs = [
        "handler.go",
        "slack.go",
    ],
    importpath = "github.com/pratiksolim/self-healing-ci/internal/webhook",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/analyzer",
        "//internal/config",
        "//internal/github",
        "//internal/retry",
    ],
)

go_test(
    name = "webhook_test",
    srcs = ["handler_test.go"],
    embed = [":webhook"],
    deps = ["//internal/retry"],
)
